--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -20,9 +20,31 @@
                             <p>{{ tempCartItem.unitPrice | currency: 'USD' }}</p>
                         </td>
                         <td>
-                            <div>
-                                <label class="items">Quantity:</label> {{ tempCartItem.quantity }}
+                            <div class="items">
+                                <label>Quantity:</label>
+
+                                <div class="row no-gutters">
+                                    <div class="col">
+                                        <button (click)="incrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
+                                            <i class="fas fa-plus"></i>
+                                        </button>
+                                    </div>
+
+                                    <div class="col ml-4 mr-2">
+                                        {{ tempCartItem.quantity }}
+                                    </div>
+
+                                    <div class="col">
+                                        <button (click)="decrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
+                                            <i class="fas fa-minus"></i>
+                                        </button>
+                                    </div>
+
+                                    <div class="col-8"></div>
+                                </div>
+
                             </div>
+                            <button (click)="remove(tempCartItem)" class="btn btn-primary btn-sm mt-2">Remove</button>
                             <p class="mt-2">Subtotal: {{ tempCartItem.quantity * tempCartItem.unitPrice!! | currency: 'USD' }}</p>
                         </td>
                     </tr>
