--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -11,6 +11,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="firstName" type="text" />
+                                <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)"
+                                     class="alert alert-danger mt-1">
+                                    <div *ngIf="firstName?.errors!['required'] ||
+                                        firstName?.errors!['notOnlyWhitespace']">
+                                        First Name is required
+                                    </div>
+                                    <div *ngIf="firstName?.errors!['minlength']">
+                                        First Name must be at least 2 characters long
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -20,6 +30,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="lastName" type="text" />
+                                <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)"
+                                     class="alert alert-danger mt-1">
+                                    <div *ngIf="lastName?.errors!['required'] ||
+                                        lastName?.errors!['notOnlyWhitespace']">
+                                        Last Name is required
+                                    </div>
+                                    <div *ngIf="lastName?.errors!['minlength']">
+                                        Last Name must be at least 2 characters long
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -29,6 +49,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="email" type="text" />
+                                <div *ngIf="email?.invalid && (email?.dirty || email?.touched)"
+                                     class="alert alert-danger mt-1">
+                                    <div *ngIf="email?.errors!['required'] ||
+                                        email?.errors!['notOnlyWhitespace']">
+                                        Email is required
+                                    </div>
+                                    <div *ngIf="email?.errors!['pattern']">
+                                        Email must be a valid email address format
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -49,6 +79,14 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="shippingAddressCountry?.invalid && (shippingAddressCountry?.dirty ||
+                                            shippingAddressCountry?.touched)"
+                                     class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressCountry?.errors!['required']">
+                                        Country is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -58,6 +96,14 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text" />
+                                <div *ngIf="shippingAddressStreet?.invalid && (shippingAddressStreet?.dirty ||
+                                            shippingAddressStreet?.touched)"
+                                     class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressStreet?.errors!['required'] ||
+                                        shippingAddressStreet?.errors!['notOnlyWhitespace']">
+                                        Street is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -67,6 +113,14 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text" />
+                                <div *ngIf="shippingAddressCity?.invalid && (shippingAddressCity?.dirty ||
+                                            shippingAddressCity?.touched)"
+                                     class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressCity?.errors!['required'] ||
+                                        shippingAddressCity?.errors!['notOnlyWhitespace']">
+                                        City is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -80,6 +134,13 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+                                <div *ngIf="shippingAddressState?.invalid && (shippingAddressState?.dirty ||
+                                            shippingAddressState?.touched)"
+                                     class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressState?.errors!['required']">
+                                        State is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -89,6 +150,14 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text" />
+                                <div *ngIf="shippingAddressZipCode?.invalid && (shippingAddressZipCode?.dirty ||
+                                            shippingAddressZipCode?.touched)"
+                                     class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressZipCode?.errors!['required'] ||
+                                        shippingAddressZipCode?.errors!['notOnlyWhitespace']">
+                                        ZipCode is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
